# ze

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VISION.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
config/: capabilities.yaml  config.yaml  persona.yaml
docs/: README.md  adding-an-agent.md  architecture.md  (+11 more)
ze-core/: ZC_GAPS.md  pyproject.toml
ze-core/tests/channels/: test_channels.py
ze-core/tests/memory/: test_consolidator.py  test_store.py
ze-core/tests/orchestration/: test_base_agent.py  test_registry.py
ze-core/tests/orchestration/nodes/: test_routing_nodes.py
ze-core/tests/routing/: test_router.py
ze-core/tests/storage/: test_sqlite_store.py
ze-core/ze_core/: __init__.py  container.py  defaults.py  errors.py
ze-core/ze_core/capability/: __init__.py  gate.py
ze-core/ze_core/channels/: base.py  registry.py  types.py
ze-core/ze_core/goals/: executor.py  planner.py  postgres.py
ze-core/ze_core/interface/: __init__.py  base.py  types.py
ze-core/ze_core/memory/: __init__.py  consolidator.py  store.py  types.py
ze-core/ze_core/migrations/versions/: 001_initial_schema.py
ze-core/ze_core/openrouter/: client.py
ze-core/ze_core/orchestration/: __init__.py  base_agent.py  registry.py  types.py
ze-core/ze_core/orchestration/nodes/: routing.py
ze-core/ze_core/persona/: postgres.py
ze-core/ze_core/proactive/: scheduler.py
ze-core/ze_core/routing/: fallback.py  router.py  types.py
ze-core/ze_core/storage/: __init__.py
(+333 files in other folders)
