[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# pip install 'ze-core[migrations]'  — required to run `python -m ze_core.migrate`
# or to use ZC_AUTO_MIGRATE=true
migrations = [
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_core"]
include = ["ze_core/py.typed"]
